# parkinson-handwriting-dl

./: .gitignore  LICENSE  README.md  pyproject.toml
paper/: handwriting_uncertainty.tex  references.bib
slides/pahaw-uncertainty/: README.md  package-lock.json  package.json
slides/pahaw-uncertainty/slides/pahaw-gabor/: index.tsx
src/analysis/: full_pairwise.py  nadeau_bengio.py
src/data/: __init__.py  features.py  pahaw.py  trajectory_image.py
src/experiments/grid_sweep/: generate_embeddings.py  param_grids.py  param_grids_robust.py  run_all_heads.py  run_repeated.py  summarize_repeated.py
src/experiments/grid_sweep/results/all_heads_repeated/: handcrafted__logistic_regression.csv  handcrafted__mlp_fixed.csv  handcrafted__mlp_small.csv  handcrafted__random_forest.csv  handcrafted__svm_linear.csv  handcrafted__svm_poly.csv  handcrafted__svm_rbf.csv  img_acceleration_effnet__logistic_regression.csv  img_acceleration_effnet__mlp_fixed.csv  img_acceleration_effnet__mlp_small.csv  img_acceleration_effnet__random_forest.csv  img_acceleration_effnet__svm_linear.csv  img_acceleration_effnet__svm_poly.csv  img_acceleration_effnet__svm_rbf.csv  img_acceleration_swin__logistic_regression.csv  img_acceleration_swin__mlp_fixed.csv  img_acceleration_swin__mlp_small.csv  img_acceleration_swin__random_forest.csv  img_acceleration_swin__svm_linear.csv  img_acceleration_swin__svm_poly.csv  (+204 more)
src/models/: __init__.py
src/models/heads/: __init__.py  mlp.py
src/models/image/: __init__.py  vit_encoder.py
src/utils/: __init__.py  metrics.py  results.py
