[project]
name = "parkinson_handwriting_dl"
version = "0.1.0"
description = "Time-frequency analysis and structure-preserving image encoding for Parkinson handwriting (PaHaW)"
authors = [{ name = "Andrea Porcelli" }]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.3.0",
    "timm>=1.0.0",
    "omegaconf>=2.3.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pillow>=10.0.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.ruff]
line-length    = 100
target-version = "py311"
src            = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
